fix: emojis and call outs

--- a/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/style-rules.mdx
+++ b/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/style-rules.mdx
@@ -9,95 +9,104 @@ menu_namespace: docConsoleMenu
 
 ## Grammatical person
 
-- Avoid using grammatical persons and prioritize imperative, actionable, or instructional constructions. (Specific cases must be analyzed with the Product Content Experience team).
+#### Avoid using grammatical persons and prioritize imperative, actionable, or instructional constructions.
 
-| Do | Don't  |
+(Specific cases must be analyzed with the Product Content Experience team).
+
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *Give a unique and descriptive name to identify the application.*  | *You can give a unique and descriptive name to identify your application.* |
 
-> ⚠️ **Exception**: system emails. They're using UXW rules overall. However, being more direct and personal communication, using the second person is recommended.
+:::note[Exception]
+System emails are using UXW rules overall. However, being more direct and personal communication, using the second person is recommended.
+:::
 
-- Avoid using *We*, *I*, *us*, *our*, *my*, *mine*, and prioritize using the company's name, but only when strictly necessary. 
+#### Avoid using *We*, *I*, *us*, *our*, *my*, *mine*, and prioritize using the company's name, but only when strictly necessary. 
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *Azion Support Team.<br/> Azion's products.*  | *Our Support Team. <br/> Our products.* |
 
-> ⚠️ **Exception**: legal documents.
+:::note[Exception]
+Legal documents.
+:::
 
 ---
 
 ## Use plain, simple, readable, and conversational language
 
-- Prioritize using active voice. It's easier to understand and more objective.
+#### Prioritize using active voice. It's easier to understand and more objective.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *The application is updated.*  | *The application has been updated by the system.* |
 
-- Take advantage of the hierarchy of components and layout to organize your ideas. This helps you to provide the necessary information and create more scannable content.
+#### Take advantage of the hierarchy of components and layout to organize your ideas. This helps you to provide the necessary information and create more scannable content.
 
-| Recommendations |
-|---|
-| ✓ Use labels to identify the fields.
-✓ Include descriptions, placeholders, and helper texts to guide and help through the journey.
-✓ Providing this information on-screen, the user can complete the task frictionless, with no need to leave the platform. |
+:::tip[Recommendations]
+- Use labels to identify the fields.
+- Include descriptions, placeholders, and helper texts to guide and help through the journey.
+- Providing this information on-screen, the user can complete the task frictionless, with no need to leave the platform.
+:::
 
 #### Use complete sentences that always convey a specific idea and are easy to read.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *List the function instances in this Edge Firewall.<br/> <br/>Specify a custom path from which edge nodes will request the origin content. Example: /custom-path*  | *List your function instances in this EF.<br/> <br/>Azion can request your content from a directory in your origin. Azion appends Origin Path to the URI when forwarding the request to your origin. Leave it in blank to use only the URI. (e.g: /custom-path)*  |
 
-> 🚫 Avoid abbreviations and Latin expressions.
->
-> 🚫 Avoid acronyms. Use only in case it's an extended and common term (IP, URL, etc.)
+:::note[Avoid]
+- Abbreviations and Latin expressions.
+- Acronyms. Use only in case it's an extended and common term (IP, URL, etc.)
+:::
 
 #### Be concise and express the information in a few words. It helps users quickly understand and complete tasks within a digital interface. 
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *It's the link to access the application.*  | *It is the hyperlink that serves as the means to gain access to the application.* |
 
-> 🚫 Avoid being verbose and using uncommon or archaic words.
+:::note[Avoid]
+Avoid being verbose and using uncommon or archaic words.
+:::
 
-- Prioritize the simplest structure to write a sentence: subject + verb + object.
+#### Prioritize the simplest structure to write a sentence: subject + verb + object.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *The application is updated.*  | *The integration, which has undergone the latest update, is now running with the most recent version.* |
 
-- Contractions help to write more conversationally and friendlyly.
+#### Contractions help to write more conversationally and friendlyly.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't |
 |---|---|
 | *It's the final step.<br/> <br/>Don't reload the page before finishing the process.* | *It is the final step.<br/> <br/>Do not reload the page before finishing the process.* |
 
-> 🚫 Avoid: contractions with verbs + nouns (Browser is/ NOT Browser's).
->
-> 💡It's okay to use contractions 'nt ('don't').
+:::note[Avoid]
+Contractions with verbs + nouns (Browser is/ NOT Browser's). However, it's okay to use contractions 'nt ('don't').
+:::
 
 ---
 
 ## Be more accurate and instructive
 
-- Explain the consequences and/or the results of an action to the user and help the user understand the decision.
+#### Explain the consequences and/or the results of an action to the user and help the user understand the decision.
 
-| Recommendations |
-|---|
-| ✓ Use the title to provide context.
-✓ In teh description, explain the situation/consequences of actions, provide further information or next steps.
-✓ Confirm the action through the buttons. Content must be aligned with the title. |
+:::tip[Recommendations]
+- Use the title to provide context.
+- In teh description, explain the situation/consequences of actions, provide further information or next steps.
+- Confirm the action through the buttons. Content must be aligned with the title.
+:::
 
-- Offer solutions when it's possible for the user to take further action and avoid frustration.
+#### Offer solutions when it's possible for the user to take further action and avoid frustration.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't  |
 |---|---|
 | *Add a payment method to use Azion with no interruptions.*  | *You need to keep your Azion account running to continue using the service.* |
 
-- Show further steps to the user, if possible. Be the guide to progress in the product and encourage action.
+#### Show further steps to the user, if possible. Be the guide to progress in the product and encourage action.
 
-| Do | Don't  |
+| ✅ Do | 🚫 Don't  |
 |---|---|
 | *Go to the Domains page for further configuration.<br/> <br/>Get a head start by clicking the card below.*  | *FALTA EXEMPLO AQUI* |
 
