feat: testing order

--- a/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/content-overview.mdx
+++ b/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/content-overview.mdx
@@ -28,7 +28,7 @@ For in-product content, the **Azion Console Content Guidelines** are the main re
 - Provide useful and accurate information to the user during each stage of their journey.
 
 :::note
-Azion content teams can consult other internal documentation such as the Brandbook and the Style Guide to complement this document, in case of any topic not included or requiring a specific treatment.
+Azion content teams can consult other internal documents to complement these guidelines, in case of any topic not included or requiring a specific treatment.
 :::
 
 ---
