--- a/src/content/docs/en/homes/components-home.mdx
+++ b/src/content/docs/en/homes/components-home.mdx
@@ -37,59 +37,15 @@ product_cards:
         description: >-
           This a description about buttons and how to use them with the Azion Console Kit.
         link: /en/documentation/products/edge-application/
-        
-  - title: Dialogs
-    cards:
       - icon: /assets/docs/images/uploads/app-aceleration.svg
-        title: Critical destructive dialog
+        title: Dialogs
         description: >-
           Speed ​​up the performance of your applications and APIs with protocol
           optimizations and advanced caching rules.
-        link: /en/documentation/products/edge-application/application-acceleration/
-      - icon: /assets/docs/images/uploads/edge-caching.svg
-        title: Non-critical destructive dialog
-        description: >-
-          Turbocharge delivery by caching content at the edge of the network,
-          closer to your users.
-        link: /en/documentation/products/edge-application/edge-caching/
-      - icon: /assets/docs/images/uploads/edge-functions.svg
-        title: Clone dialog
-        description: >-
-          Create event-driven, serverless applications, at the edge of the
-          network, closer to users.
-        link: /en/documentation/products/edge-application/edge-functions/
-      - icon: /assets/docs/images/uploads/image-processor.svg
-        title: Attention dialog
-        description: >-
-          Optimize, convert, and manipulate your images just-in-time to enhance
-          the user experience.
-        link: /en/documentation/products/edge-application/image-processor/
-      - icon: /assets/docs/images/uploads/load-balancer.svg
-        title: InfoTooltip
-        description: >-
-          Balance loads on your servers and across any cloud provider to boost
-          the reliability and availability of your content, applications, and
-          APIs.
-        link: /en/documentation/products/edge-application/load-balancer/
-  - title: Feedback messages
-    cards:
+        link: /en/documentation/products/console-kit/components/dialogs/
       - icon: /assets/docs/images/uploads/icon-guides.svg
-        title: Inline messages
+        title: Feedback messages
         description: Find practical documentation on how to use products.
-        link: /en/documentation/products/guides/
-      - icon: /assets/docs/images/uploads/load-balancer.svg
-        title: Toasts
-        description: >-
-          Balance loads on your servers and across any cloud provider to boost
-          the reliability and availability of your content, applications, and
-          APIs.
-        link: /en/documentation/products/edge-application/load-balancer/
-      - icon: /assets/docs/images/uploads/edge-functions.svg
-        title: Alerts
-        description: >-
-          Balance loads on your servers and across any cloud provider to boost
-          the reliability and availability of your content, applications, and
-          APIs.
-        link: /en/documentation/products/edge-application/load-balancer/
+        link: /en/documentation/products/console-kit/components/feedback-messages/
 permalink: /documentation/products/console-kit/components/
 ---
