refactor: add specific info

--- a/src/content/docs/en/pages/main-menu/reference/secure/intelligent-dns/intelligent-dns.mdx
+++ b/src/content/docs/en/pages/main-menu/reference/secure/intelligent-dns/intelligent-dns.mdx
@@ -199,11 +199,11 @@ To configure massive redirection for domain migration, access the [Massive Redir
 
 ### Hosted Zones
 
-Total number of zones hosted in Intelligent DNS. 
+Total number of zones hosted in Intelligent DNS on Azion Edge Computing Platform. Zones are considered as hosted as soon as you create them, independently of them being active or not.
 
 ### Standard Queries
 
-Total amount of queries made to your zones hosted in Intelligent DNS. One query is processed whenever your zone, composed by a domain and records, receives a request.
+Total amount of queries made to your zones hosted in Intelligent DNS. One query is processed whenever your zone, composed by a domain and records, receives a request, and independently of type of query it receives or response it gives.
 
 ---
 
