--- a/src/content/docs/en/pages/main-menu/reference/secure/edge-firewall/web-application-firewall/web-application-firewall.mdx
+++ b/src/content/docs/en/pages/main-menu/reference/secure/edge-firewall/web-application-firewall/web-application-firewall.mdx
@@ -124,10 +124,9 @@ The `Last Editor` and `Last Modified` fields are only available through the [API
 
 <Button href="https://www.azion.com/en/pricing/#WebApplicationFirewall" text="see pricing"></Button>
 
-The total amount of HTTP and HTTPS requests from a user or device made to edge applications running on Azion Edge Computing Platform that have the **Web Application Firewall (WAF)** module activated in **Edge Firewall**. A request is billed independently of request success or failure and server protocol version (HTTP/1.1, HTTP/2.0, HTTP/3.0).
+The total amount of HTTP and HTTPS requests from a user or device made to edge applications running on Azion Edge Computing Platform that have the **Web Application Firewall (WAF)** module activated in **Edge Firewall**.
 
-Whenever a request is processed by WAF, it can be considered as a normal request, a threat, or an attack. WAF provides different resolutions for each type of request, but all types are billed.
-
+A request is billed whenever the request matches a rule enabled in **Rules Engine for Edge Firewall** with the **Set WAF** beahvior.
 
 
 ---
