--- a/src/content/docs/en/pages/main-menu/reference/secure/edge-firewall/web-application-firewall/web-application-firewall.mdx
+++ b/src/content/docs/en/pages/main-menu/reference/secure/edge-firewall/web-application-firewall/web-application-firewall.mdx
@@ -126,7 +126,7 @@ The `Last Editor` and `Last Modified` fields are only available through the [API
 
 The total amount of HTTP and HTTPS requests from a user or device made to edge applications running on Azion Edge Computing Platform that have the **Web Application Firewall (WAF)** module activated in **Edge Firewall**.
 
-A request is billed whenever the request matches a rule enabled in **Rules Engine for Edge Firewall** with the **Set WAF** beahvior.
+A request is billed whenever the request matches a rule enabled in **Rules Engine for Edge Firewall** with the **Set WAF** behavior.
 
 
 ---
