fix: emoji donts

--- a/src/content/docs/en/pages/devtools/documentation-console-kit/design/components/search-bar.mdx
+++ b/src/content/docs/en/pages/devtools/documentation-console-kit/design/components/search-bar.mdx
@@ -76,7 +76,7 @@ A standard text was defined to be within this element: **Search**.
 
 - Use sentence case.
 
-| ✅ Do | 🚫 Don't  |
+| ✅ Do | ❌ Don't  |
 |---|---|
 | *Search*  | *Search an application here* |
 
@@ -84,7 +84,7 @@ A standard text was defined to be within this element: **Search**.
 
 In case of search engine working with another behavior, the recommendation is following this structure: Search by [behavior]
 
-| ✅ Do | 🚫 Don't  |
+| ✅ Do | ❌ Don't  |
 |---|---|
 | *Search by date*  | *Searching your timestamp* |
 
