--- a/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/style-rules.mdx
+++ b/src/content/docs/en/pages/devtools/documentation-console-kit/in-product-content/style-rules.mdx
@@ -13,7 +13,7 @@ menu_namespace: docConsoleMenu
 
 (Specific cases must be analyzed with the Product Content Experience team).
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *Give a unique and descriptive name to identify the application.*  | *You can give a unique and descriptive name to identify your application.* |
 
@@ -23,7 +23,7 @@ System emails are using UXW rules overall. However, being more direct and person
 
 #### Avoid using *We*, *I*, *us*, *our*, *my*, *mine*, and prioritize using the company's name, but only when strictly necessary. 
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *Azion Support Team.<br/> Azion's products.*  | *Our Support Team. <br/> Our products.* |
 
@@ -37,7 +37,7 @@ Legal documents.
 
 #### Prioritize using active voice. It's easier to understand and more objective.
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *The application is updated.*  | *The application has been updated by the system.* |
 
@@ -51,7 +51,7 @@ Legal documents.
 
 #### Use complete sentences that always convey a specific idea and are easy to read.
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *List the function instances in this Edge Firewall.<br/> <br/>Specify a custom path from which edge nodes will request the origin content. Example: /custom-path*  | *List your function instances in this EF.<br/> <br/>Azion can request your content from a directory in your origin. Azion appends Origin Path to the URI when forwarding the request to your origin. Leave it in blank to use only the URI. (e.g: /custom-path)*  |
 
@@ -62,7 +62,7 @@ Legal documents.
 
 #### Be concise and express the information in a few words. It helps users quickly understand and complete tasks within a digital interface. 
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *It's the link to access the application.*  | *It is the hyperlink that serves as the means to gain access to the application.* |
 
@@ -72,13 +72,13 @@ Avoid being verbose and using uncommon or archaic words.
 
 #### Prioritize the simplest structure to write a sentence: subject + verb + object.
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *The application is updated.*  | *The integration, which has undergone the latest update, is now running with the most recent version.* |
 
 #### Contractions help to write more conversationally and friendlyly.
 
-| ✅ Do | 🚫 Don't |
+| ✅ Do | ❌ Don't |
 |---|---|
 | *It's the final step.<br/> <br/>Don't reload the page before finishing the process.* | *It is the final step.<br/> <br/>Do not reload the page before finishing the process.* |
 
@@ -100,13 +100,13 @@ Contractions with verbs + nouns (Browser is/ NOT Browser's). However, it's okay 
 
 #### Offer solutions when it's possible for the user to take further action and avoid frustration.
 
-| ✅ Do | 🚫 Don't  |
+| ✅ Do | ❌ Don't  |
 |---|---|
 | *Add a payment method to use Azion with no interruptions.*  | *You need to keep your Azion account running to continue using the service.* |
 
 #### Show further steps to the user, if possible. Be the guide to progress in the product and encourage action.
 
-| ✅ Do | 🚫 Don't  |
+| ✅ Do | ❌ Don't  |
 |---|---|
 | *Go to the Domains page for further configuration.<br/> <br/>Get a head start by clicking the card below.*  | *FALTA EXEMPLO AQUI* |
 
