--- a/src/content/docs/en/pages/main-menu/reference/store/object-storage/index.mdx
+++ b/src/content/docs/en/pages/main-menu/reference/store/object-storage/index.mdx
@@ -59,9 +59,9 @@ Objects, or files, can be uploaded, modified, downloaded, and removed from bucke
 
 ### Object key
 
-An object key is a string of characters that composes a unique identifier for objects stored in **Edge Storage** buckets. Through the available tools, users can retrieve a file stored in a bucket by using its object key.
+An object key is a string of characters that serves as a unique identifier for objects stored in **Edge Storage** buckets. Through the available tools, you can deliver, retrieve, modify or delete a file stored in a bucket by using its object key.
 
-The object key isn't required to match the original file path or name from the local storage from which it was retrieved, nor contain the original file extension. However, when uploading a local file to a bucket, it's recommended to attribute the object key after the file to match local storage conventions. For example, for the local file `folder/file.png`, the object key should be the same.
+The object key doesn't have to exactly match the original file name in local storage, or even include the original file extension or path. However, when uploading a local file to a bucket, it's recommended to attribute an object key after the file name to match local storage conventions. For example, for the local file `folder/file.png`, the object key should be the same.
 
 The object key cannot be changed. Uploading a different object or modifying object contents using an existing key replaces the object. Once an object is replaced, earlier versions can't be retrieved.
 
@@ -129,7 +129,7 @@ Uploads an object to a bucket.
 
 Use the `--data-binary` option in the cURL command to send raw binary data, such as images or complex files without undergoing URL encoding.
 
-You must specify the MIME type of the object being sent in the body using the `Content-Type` header. For example, objects with the `.txt` extension should contain the `Content-Type: text/plain` header. Alternatively, use the `application/octet-stream` MIME type to indicate that the data is a binary stream and the server should handle it as raw binary data.
+You must specify the MIME type of the object being sent in the body using the `Content-Type` header. For example, objects with the `.txt` extension should contain the `Content-Type: text/plain` header. Use the `application/octet-stream` MIME type to indicate that the data is a binary stream and the server should handle it as raw binary data.
 
 Sending a new object with an object key that already existed in the bucket will replace the previous object.
 
