--- a/src/content/docs/en/pages/main-menu/pricing/pricing.mdx
+++ b/src/content/docs/en/pages/main-menu/pricing/pricing.mdx
@@ -46,7 +46,7 @@ If your applications received 750 million requests from the United States in 1 m
 | The charge is for every 10,000 requests, at a unit price of 0.009 USD, so (750,000,000 / 10,000) x 0.009 USD | 675 USD | 
 | **Total charges**<br/>According to this simulation, the total amount to be paid in this month will be | **3,125 USD** | 
 
-### Application Acceleration
+### Application Accelerator
 
 Speed ​​up the performance of your applications and APIs with protocol optimizations and advanced request and response rules.
 
@@ -64,7 +64,7 @@ Speed ​​up the performance of your applications and APIs with protocol optim
 
 #### Price example
 
-If your **Application Acceleration** enabled application generated 30TB of data transferred in Brazil in 1 month, the price will be calculated as follows:
+If your **Application Accelerator** enabled application generated 30TB of data transferred in Brazil in 1 month, the price will be calculated as follows:
 
 | | |
 | :--- | ---: |
