fix: delete professional services

--- a/src/content/docs/en/pages/main-menu/pricing/pricing.mdx
+++ b/src/content/docs/en/pages/main-menu/pricing/pricing.mdx
@@ -423,86 +423,6 @@ Monthly charges are based on each month's Azion usage charges, subject to a mont
 
 ---
 
-## Which Azion Service Plan best fits you?
+import ContributorList from '~/components/ContributorList.astro'
 
-From small businesses to large enterprises, Azion's platform and flexible service level make it easy to choose the one that fits your needs.
-
-### Developer 
-
-<Badge variant="accent">
-Free
-</Badge>
-
-The **Developer Plan** is recommended if you want to explore the potential of Azion's platform by yourself.
-
-<Button href="#developer-plan" text="get developer"></Button>
-
-### Business
-
-<Badge variant="accent">
-Starting at USD 100 /month
-</Badge>
-
-The **Business Plan** is ideal for customers looking for efficient and accessible technological solutions.
-
-<Button href="#business-plan" text="get Business"></Button>
-
-### Enterprise
-
-<Badge variant="accent">
-Starting at USD 3,500 /month
-</Badge>
-
-The **Enterprise Plan** is recommended for customers with critical operations and systems.
-
-<Button href="#enterprise-plan" text="get Enterprise"></Button>
-
-### Mission Critical
-
-<Badge variant="accent">
-Custom
-</Badge>
-
-The **Mission-Critical Plan** is recommended for customers whose online presence is critical and service performance directly impacts the business results.
-
-<Button href="#mission-critical-plan" text="get Mission Critical"></Button>
-
-### Features
-
-#### Product Features
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **Access features in preview**<br/>First access to test Azion's powerful newly released features and cutting-edge technologies | ✅ | Opt-in | Opt-in | Opt-in |
-| **Composable Applications**<br/>Extend your applications with third-party integrations available in Azion Marketplace | ✅ | ✅ | ✅ | ✅ |
-| **DDoS Protection Unmetered**<br/>Unmetered and unlimited protection | --- | ✅ | ✅ | ✅ |
-| **Single Sign-On (SSO)**<br/>Setting up and defining who can access your Azion account with the same identity provider you currently use | --- | --- | ✅ | ✅ |
-
-#### Service and Support
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **Online Learning Program**<br/>24x7 access to a range of educational materials to master Azions's solutions | ✅ | ✅ | ✅ | ✅ |
-| **Tech Support** | Access to documentation, whitepapers, bug reports, and our Community on Discord | 24x7 access to Support Engineers via ticket and email | 24x7 access to Support Engineers, 8x5 to R&D Engineers through ticket, email, and phone | 24x7 access to Support Engineers, 8x5 to R&D Engineers through ticket, email, and phone |
-| **Severity of cases / Response times** | --- | General guidance: < 24h *<br/>System impaired: < 12h<br/>Production System impaired: < 4h<br/>Production system down: < 2h <br/>Business-critical system down: N/A | General guidance: < 24h *<br/>System impaired: < 12h<br/>Production System impaired: < 4h<br/>Production system down: < 1h<br/>Business-critical system down: < 15min | General guidance: < 12h *<br/>System impaired: < 12h<br/>Production System impaired: < 2h<br/>Production system down: < 30min<br/>Business-critical system down: < 15min |
-| **Integration Services**<br/>Smooth and efficient integration of your applications | --- | 5 hours/year included | 20 hours/year included | 60 hours/year included |
-| **Best Practices Review**<br/>In-depth analysis of your setup to help unlock the full potential of your digital environment | --- | Paid Add-on | 20 hours/year included | 40 hours/year included |
-| **Instructor-Led Training**<br/>Education programs about Azion's solutions with learning experiences adapted to your specific needs | --- | --- | Paid Add-on | Paid Add-on |
-| **Business Events Support**<br/>Support and assistance provided to assist customers during events in real time | --- | --- | 1 event per year | Included |
-| **Technical Account Manager**<br/>A Professional that provides strategic technical guidance to help accelerate the digital transformation and edge computing journey | --- | --- | Paid Add-on | Included |
-| **Managed Configurations**<br/>Azion manages configs for optimal edge performance, security, and compliance | --- | --- | Paid Add-on |Paid Add-on  |
-| **Security Response Team**<br/>Dedicated team of security experts to promptly detect, mitigate, and respond to security threats | --- | --- | Paid Add-on | Paid Add-on |
-| **Slack Channel**<br/>Real-time communication, support assistance, and teamwork in one central place | --- | --- | Paid Add-on | Paid Add-on |
-
-:::caution[warning]
-Business hours are generally defined as **9:00am to 6:00pm**, in the country where Azion was contracted, excluding holidays and weekends. These times may vary in countries with multiple time zones.
-:::
-
-#### Compliance
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **PCI DSS 4.0**<br/>Azion was audited by a third-party Qualified Security Assessor and certified as a PCI DSS 4.0 Level 1 Service Provider | --- | --- | ✅ | ✅ |
-| **SOC 2 Type 2 (and SOC 3)**<br/>Azion has undergone an independent audit to attest certification with AICPA SOC 2 Type 2 and SOC 3 with adequate controls in place for Security and Availability | --- | --- | ✅ | ✅ |
-| **Edge Network Custom Maps**<br/>Enable a custom edge network to avoid a specific country or region, or to deliver within a specific country | --- | --- | ✅ | ✅ |
-| **FIPS 140-2 Level 3**<br/>The private key will be stored in an HSM that uses a cryptographic module certified in the FIPS-140 Level 3 standard | --- | --- | --- | Paid Add-on |
+**Contributors** <ContributorList>Contributor</ContributorList>
