--- a/src/content/docs/pt-br/pages/menu-principal/pricing/pricing.mdx
+++ b/src/content/docs/pt-br/pages/menu-principal/pricing/pricing.mdx
@@ -417,91 +417,12 @@ Para clientes cuja presença online é crítica e o desempenho do serviço tem i
 
 **Personalizado**
 
-:::caution[warning]
+:::caution[atenção]
 As cobranças mensais são baseadas nas tarifas de uso da Azion de cada mês, sujeitas a um mínimo mensal.
 :::
 
 ---
 
-## Qual Plano de serviço da Azion é o melhor para você?
+import ContributorList from '~/components/ContributorList.astro'
 
-De pequenas empresas a grandes corporações, as opções flexíveis de níveis de serviço na plataforma da Azion facilitam a escolha do plano que melhor atenda às suas necessidades.
-### Developer 
-
-<Badge variant="accent">
-Grátis
-</Badge>
-
-O plano **Developer** é ideal para desenvolvedores que desejam explorar o potencial de nossa plataforma por conta própria.
-
-<Button href="#developer-plan" text="obter developer"></Button>
-
-### Business
-
-<Badge variant="accent">
-A partir de USD 100/mês
-</Badge>
-
-O plano **Business** é ideal para clientes que buscam soluções tecnológicas eficientes e acessíveis.
-
-<Button href="#business-plan" text="obter Business"></Button>
-
-### Enterprise
-
-<Badge variant="accent">
-A partir de USD $3.500/mês
-</Badge>
-
-O plano Enterprise é ideal para clientes com operações e sistemas críticos.
-
-<Button href="#enterprise-plan" text="obter Enterprise"></Button>
-
-### Mission Critical
-
-<Badge variant="accent">
-Personalizado
-</Badge>
-
-O plano **Mission Critical** é ideal para clientes cuja presença online é crítica e a performance do serviço afeta diretamente os resultados do negócio.
-
-<Button href="#mission-critical-plan" text="obter Mission Critical"></Button>
-
-### Features
-
-#### Features dos produtos
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **Acesso à features em Preview**<br/>Acesso prioritário para testar a tecnologia de ponta e as poderosas features recém-lançadas da Azion | ✅ | Opt-in | Opt-in | Opt-in |
-| **Composable Applications**<br/>Amplie suas aplicações com integrações de terceiros disponíveis no Azion Marketplace | ✅ | ✅ | ✅ | ✅ |
-| **DDoS Protection Unmetered**<br/>Proteção ilimitada e sem limite de banda | --- | ✅ | ✅ | ✅ |
-| **Single Sign-On (SSO)**<br/>Configuração e definição de quem pode acessar sua conta na Azion com o mesmo provedor de identidade que você já usa| --- | --- | ✅ | ✅ |
-
-#### Serviços e Suporte
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **Online Learning Program**<br/>Acesso 24x7 a uma série de materiais educacionais para dominar as soluções da Azion | ✅ | ✅ | ✅ | ✅ |
-| **Suporte técnico** | Acesso aos nossos Support Engineers 24 horas por dia, via ticket ou e-mail | Acesso aos nossos Support Engineers 24 horas por dia e aos Engenheiros de R&D em horário comercial, via ticket, e-mail e telefone | Acesso aos nossos Support Engineers 24 horas por dia e aos Engenheiros de R&D em horário comercial, via ticket, e-mail e telefone |
-| **Severidade dos casos / Tempos de resposta** | --- | General guidance: < 24h *<br/>System impaired: < 12h<br/>Production System impaired: < 4h<br/>Production system down: < 2h <br/>Business-critical system down: N/A | General guidance: < 24h *<br/>System impaired: < 12h<br/>Production System impaired: < 4h<br/>Production system down: < 1h<br/>Business-critical system down: < 15min | General guidance: < 12h *<br/>System impaired: < 12h<br/>Production System impaired: < 2h<br/>Production system down: < 30min<br/>Business-critical system down: < 15min |
-| **Integration Services**<br/>Integração de suas aplicações de forma eficiente e tranquila | --- | 5 hora/ano inclusas | 20 horas/ano inclusas | 60 horas/ano inclusas |
-| **Best Practices Review**<br/>Análise aprofundada da sua configuração para ajudar a desbloquear todo o potencial do seu ambiente digital | --- | Add-on pago | 20 horas/ano inclusas | 40 horas/ano inclusas |
-| **Instructor-Led Training**<br/>Análise aprofundada da sua configuração para ajudar a desbloquear todo o potencial do seu ambiente digital | --- | --- | Add-on pago | Add-on pago |
-| **Business Events Support**<br/>Suporte e assistência fornecidos para ajudar os clientes durante eventos em tempo real | --- | --- | 1 evento por ano | Incluso |
-| **Technical Account Manager**<br/>Um profissional que oferece orientação técnica estratégica para ajudar a acelerar sua transformação digital e sua jornada de edge computing | --- | --- | Add-on pago | Incluso |
-| **Managed Configurations**<br/>Azion gerencia configurações para melhor desempenho, segurança e conformidade no edge | --- | --- | Add-on pago | Add-on pago |
-| **Security Response Team**<br/>Equipe de especialistas em segurança para detectar, mitigar e responder prontamente a ameaças à segurança | --- | --- | Add-on pago | Add-on pago |
-| **Slack Channel**<br/>Comunicação em tempo real, suporte e trabalho em equipe em um único local | --- | --- | Add-on pago | Add-on pago |
-
-:::caution[atenção]
-Horário comercial é geralmente definido como das **09:00 AM às 06:00 PM**, no país em que a Azion foi contratada, excluindo feriados e fins de semana. Esses horários podem variar em países com múltiplos fusos horários.
-:::
-
-#### Compliance
-
-| Features | Developer | Business | Enterprise | Mission Critical |
-| --- | ----------- |----------- |----------- |----------- |
-| **PCI DSS 4.0**<br/>A Azion é auditada por um Assessor de Segurança qualificado terceirizado e certificada como Provedora de Serviços PCI DSS 4.0 Nível 1 | --- | --- | ✅ | ✅ |
-| **SOC 2 Type 2 (and SOC 3)**<br/>A Azion passou por uma auditoria independente para atestar as certificações AICPA SOC 2 Tipo 2 e SOC 3 com controles adequados de Segurança e Disponibilidade | --- | --- | ✅ | ✅ |
-| **Edge Network Custom Maps**<br/>Habilite uma rede de borda personalizada para evitar um país ou região específica ou para entregar em um país específico | --- | --- | ✅ | ✅ |
-| **FIPS 140-2 Level 3**<br/>A chave primária será armazenada em um HSM que utiliza módulo criptográfico certificado no strandard FIPS-140 Level 3 | --- | --- | --- | Add-on pago |
+**Contribuidores** <ContributorList>Contributor</ContributorList>
