--- a/src/content/docs/pt-br/pages/devtools/cli/azion-cli/other/cache-settings/cache-settings.mdx
+++ b/src/content/docs/pt-br/pages/devtools/cli/azion-cli/other/cache-settings/cache-settings.mdx
@@ -8,7 +8,8 @@ permalink: /documentacao/produtos/cli/cache-settings-crud/
 ---
 
 :::note
-No caso de um ou mais campos obrigatórios não serem informados através das flags específicas, uma mensagem interativa será exibida, solicitando essas informações.
+alteraçao aleatória
+ caso de um ou mais campos obrigatórios não serem informados através das flags específicas, uma mensagem interativa será exibida, solicitando essas informações.
 :::
 
 ## Criar
